--- a/site-web/templates/index.gohtml
+++ b/site-web/templates/index.gohtml
@@ -7,10 +7,10 @@
         <link href="/static/style.css" rel="stylesheet">
     </head>
     <body>
-    <h1>TP utilisation spotify</h1>
-    <div class="center">
-        <a href="/album/jul"><span>JUL</span></a>
-        <a href="/track/sdm"><span>SDM</span></a>
+    <h1>TP utilisation spotify <img class="logo" src="/static/spot.png"></h1>
+    <div class="boutons">
+        <a class="links" href="/album/jul">JUL<img class="icons" src="/static/ufo-flying.png"></a>
+        <a  class="links" href="/track/sdm">SDM<img class="icons" src="/static/sun-glasses.png"></a>
     </div>
     </body>
     </html>
