--- a/site-web/templates/jul.gohtml
+++ b/site-web/templates/jul.gohtml
@@ -7,7 +7,7 @@
         <link href="/static/jul.css" rel="stylesheet">
     </head>
     <body>
-    <h1><a href="/" class="back-button">Retour</a> Albums de JUL</h1>
+    <h1><a href="/" class="back-button"><img class ="retour" src="/static/fleche-droite.png">Retour</a><span> Albums de JUL<span></h1>
     <ul>
         {{ range . }}
             <li>
