--- a/site-web/styles/sdm.css
+++ b/site-web/styles/sdm.css
@@ -21,6 +21,7 @@ h1 {
     display: flex;
     justify-content: center;
     font-size: 2rem;
+    text-shadow: rgb(46, 45, 45) 10px 4px 7px;
 }
 
 span {
